Create checksums for binaries.

--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="FullscreenColors" default="dist" basedir=".">
+<project name="FullscreenColors" default="checksum" basedir=".">
 	<description>
     simplest example build file
   </description>
@@ -7,13 +7,13 @@
 	<property name="build" location="build" />
 	<property name="dist" location="dist" />
 	<property name="version" value="1.0" />
-	<property name="main-class" value="com.github.jirkafm.FullscreenColors" />	
+	<property name="main-class" value="com.github.jirkafm.FullscreenColors" />
 
 	<target name="init">
 		<tstamp />
 		<mkdir dir="${build}/Windows" />
 		<mkdir dir="${build}/Linux" />
-		<mkdir dir="${build}/Mac" />		
+		<mkdir dir="${build}/Mac" />
 	</target>
 
 	<target name="compile" depends="init" description="compile the source">
@@ -41,14 +41,14 @@
 				<attribute name="Implementation-Vendor" value="com.github.jirkafm" />
 				<attribute name="Implementation-Title" value="FullscreenColors" />
 				<attribute name="Implementation-Version" value="1.0.0" />
-                <attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
+				<attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
 				<attribute name="Rsrc-Main-Class" value="${main-class}" />
 				<attribute name="Class-Path" value="." />
-				<attribute name="Rsrc-Class-Path" value="./ swt.jar"/>
+				<attribute name="Rsrc-Class-Path" value="./ swt.jar" />
 			</manifest>
-			<zipfileset src="lib/jar-in-jar-loader.zip"/>
-			<fileset dir="${build}/Windows"/>
-			<zipfileset dir="lib/Windows" includes="swt.jar"/>
+			<zipfileset src="lib/jar-in-jar-loader.zip" />
+			<fileset dir="${build}/Windows" />
+			<zipfileset dir="lib/Windows" includes="swt.jar" />
 		</jar>
 		<jar destfile="${dist}/${ant.project.name}-Linux-${version}.jar">
 			<manifest>
@@ -56,14 +56,14 @@
 				<attribute name="Implementation-Vendor" value="com.github.jirkafm" />
 				<attribute name="Implementation-Title" value="FullscreenColors" />
 				<attribute name="Implementation-Version" value="1.0.0" />
-				<attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
+				<attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
 				<attribute name="Rsrc-Main-Class" value="${main-class}" />
 				<attribute name="Class-Path" value="." />
-				<attribute name="Rsrc-Class-Path" value="./ swt.jar"/>
+				<attribute name="Rsrc-Class-Path" value="./ swt.jar" />
 			</manifest>
-			<zipfileset src="lib/jar-in-jar-loader.zip"/>
-			<fileset dir="${build}/Linux"/>
-			<zipfileset dir="lib/Linux" includes="swt.jar"/>
+			<zipfileset src="lib/jar-in-jar-loader.zip" />
+			<fileset dir="${build}/Linux" />
+			<zipfileset dir="lib/Linux" includes="swt.jar" />
 		</jar>
 		<jar destfile="${dist}/${ant.project.name}-Mac-${version}.jar">
 			<manifest>
@@ -71,15 +71,23 @@
 				<attribute name="Implementation-Vendor" value="com.github.jirkafm" />
 				<attribute name="Implementation-Title" value="FullscreenColors" />
 				<attribute name="Implementation-Version" value="1.0.0" />
-				<attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
+				<attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
 				<attribute name="Rsrc-Main-Class" value="${main-class}" />
 				<attribute name="Class-Path" value="." />
-				<attribute name="Rsrc-Class-Path" value="./ swt.jar"/>
+				<attribute name="Rsrc-Class-Path" value="./ swt.jar" />
 			</manifest>
-			<zipfileset src="lib/jar-in-jar-loader.zip"/>
-			<fileset dir="${build}/Mac"/>
-			<zipfileset dir="lib/Mac" includes="swt.jar"/>
+			<zipfileset src="lib/jar-in-jar-loader.zip" />
+			<fileset dir="${build}/Mac" />
+			<zipfileset dir="lib/Mac" includes="swt.jar" />
 		</jar>
+	</target>
+
+	<target name="checksum" depends="dist">
+		<checksum>
+			<fileset dir="${dist}">
+				<include name="*.jar"/>
+			</fileset>
+		</checksum>
 	</target>
 
 	<target name="clean" description="clean up">
