--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,8 @@
 	<property name="dist" location="dist" />
 	<property name="version" value="1.0" />
 	<property name="main-class" value="com.github.jirkafm.FullscreenColors" />
+	<property name="ant.build.javac.source" value="1.8"/>
+	<property name="ant.build.javac.target" value="1.8"/>
 
 	<target name="init">
 		<tstamp />
