--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="./lib/Windows/swt.jar"/>
+	<classpathentry kind="lib" path="lib/Windows/swt.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
